# TradeView

./: config.yaml  pyproject.toml
tradeview/: main.py
tradeview/auth/: authenticate.py
tradeview/pages/auth/: login.py  logout.py
tradeview/pages/home/: home.py
